prost-reflect-derive/tests/enum.stderr
error: cannot derive ReflectMessage for enum
 --> tests/enum.rs:5:5
  |
5 | pub enum MyMessage {}
  |     ^^^^
